fixed loading page not aligning with real page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,7 +23,6 @@ input {
   grid-template-columns: 1fr 1fr;
   gap: 10px;
 }
-#initialModalHolder,
 #loadingHolder {
   display: grid;
   width: 100%;
